--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "scripts": {
     "compile": "npx hardhat compile",
+    "test0": "npx hardhat test ./test/0_nftchef.js",
     "deploy:hardhat": "npx hardhat run scripts/deploy.js",
     "deploy:goerli": "npx hardhat run scripts/deploy.js --network goerli",
     "deploy:rinkeby": "npx hardhat run scripts/deploy.js --network rinkeby",
