--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "compile": "npx hardhat compile",
     "test0": "npx hardhat test ./test/0_nftchef.js",
     "deploy:hardhat": "npx hardhat run scripts/deploy.js",
+    "deploy:testnet": "npx hardhat run scripts/deploy.js --network testnet",
     "deploy:goerli": "npx hardhat run scripts/deploy.js --network goerli",
     "deploy:rinkeby": "npx hardhat run scripts/deploy.js --network rinkeby",
     "verify:rinkeby": "npx hardhat verify --network rinkeby DEPLOYED_CONTRACT_ADDRESS 'Constructor argument 1'"
