--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
   "license": "MIT",
   "scripts": {
     "compile": "npx hardhat compile",
-    "test0": "npx hardhat test ./test/0_nftchef.js",
-    "deploy:hardhat": "npx hardhat run scripts/deploy.js",
-    "deploy:testnet": "npx hardhat run scripts/deploy.js --network testnet",
-    "deploy:goerli": "npx hardhat run scripts/deploy.js --network goerli",
-    "deploy:rinkeby": "npx hardhat run scripts/deploy.js --network rinkeby",
+    "test0": "npx hardhat test ./test/0_nftstaking.js",
+    "test1": "npx hardhat test ./test/1_nftchef.js",
+    "test2": "npx hardhat test ./test/2_smartchef.js",
+    "deploy:hardhat": "npx hardhat run scripts/testnet/deploy.js",
+    "deploy:testnet": "npx hardhat run scripts/testnet/deploy.js --network testnet",
+    "deploy:goerli": "npx hardhat run scripts/testnet/deploy.js --network goerli",
+    "deploy:rinkeby": "npx hardhat run scripts/testnet/deploy.js --network rinkeby",
     "verify:rinkeby": "npx hardhat verify --network rinkeby DEPLOYED_CONTRACT_ADDRESS 'Constructor argument 1'"
   },
   "devDependencies": {
