run test scripts with solidity-coverage and gas reporter, solhint

--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,32 @@
 .private
 .cache
 .DS_Store
-/artifacts
-/cache
 
+coverage
+coverage.json
+typechain-types
+yarn-error.log
+
+#Hardhat files
+/artifacts
+artifacts/
+artifacts-ref/
+hh-cache/
+hh-cache-ref/
+
+#foundry test compilation files
+/cache
+cache
+out
+reference-out
+optimized-out
+reference-working
+
+# VScode
+.vscode
+__pycache__
+
+#Test contract
 NFTFactory.sol
 SecondSkinNFT.sol
 TAVA.sol
