--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
   "author": "cui",
   "license": "MIT",
   "scripts": {
+    "build": "npx hardhat compile --config ./hardhat.config.js",
+    "profile": "REPORT_GAS=true npx hardhat test --config ./hardhat.config.js",
+    "coverage": "npx hardhat coverage --solcoverjs ./.solcover.js",
     "compile": "npx hardhat compile",
     "test0": "npx hardhat test ./test/0_nftstaking.js",
     "test1": "npx hardhat test ./test/1_nftchef.js",
     "test2": "npx hardhat test ./test/2_smartchef.js",
     "test": "npx hardhat test",
+    "lint:check:solhint": "solhint --config ./.solhint.json --ignore-path ./.solhintignore contracts/**/*.sol",
     "deploy:hardhat": "npx hardhat run scripts/testnet/deploy.js",
     "deploy:testnet": "npx hardhat run scripts/testnet/deploy.js --network testnet",
     "deploy:goerli": "npx hardhat run scripts/testnet/deploy.js --network goerli",
