--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "test": "npx hardhat test",
     "lint:check:solhint": "solhint --config ./.solhint.json --ignore-path ./.solhintignore contracts/**/*.sol",
     "deploy:hardhat": "npx hardhat run scripts/testnet/deploy.js",
+    "deploy:local": "npx hardhat run scripts/testnet/deploy_local.js --network testnet",
     "deploy:testnet": "npx hardhat run scripts/testnet/deploy.js --network testnet",
     "deploy:goerli": "npx hardhat run scripts/testnet/deploy.js --network goerli",
     "deploy:rinkeby": "npx hardhat run scripts/testnet/deploy.js --network rinkeby",
+    "deploy:mainnet": "npx hardhat run scripts/mainnet/deploy.js --network mainnet",
     "verify:rinkeby": "npx hardhat verify --network rinkeby DEPLOYED_CONTRACT_ADDRESS 'Constructor argument 1'"
   },
   "devDependencies": {
@@ -29,7 +31,7 @@
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "^2.1.1",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@openzeppelin/contracts": "^4.7.3",
+    "@openzeppelin/contracts": "^4.8.0",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
     "chai": "^4.3.6",
